--- a/src/index.css
+++ b/src/index.css
@@ -1,15 +1,13 @@
 @import-normalize; /* bring in normalize.css styles */
 
 body {
-  padding: 60px;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-
-  background: white;
+  background: linear-gradient(to bottom, #ebd57b, #e4c0c0);
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-size: cover;
@@ -20,37 +18,31 @@ code {
     monospace;
 }
 
-ul {
-  list-style: none;
-  margin-top: 0;
-  margin-bottom: 0;
-  padding: 0;
+/*---------------*/
+html {
+  box-sizing: border-box;
+  width: 100vw;
+  overflow-x: hidden;
 }
 
-h1,
-h2,
-h3,
-h4,
-h5,
-h6,
-p {
+*,
+*::before,
+*::after {
+  box-sizing: inherit;
+}
+
+body {
   margin: 0;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
+    Oxygen-Sans, Ubuntu, Cantarell, 'Helvetica Neue', sans-serif;
+  color: #212121;
+  background-color: #fff;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
 }
 
 img {
   display: block;
   max-width: 100%;
   height: auto;
-}
-
-a {
-  text-decoration: none;
-  outline: none;
-}
-
-button {
-  border: none;
-  margin: 0;
-  padding: 0;
-  background-color: transparent;
 }
